--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@remixicon/react": "^4.2.0",
     "framer-motion": "^11.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-card-slider-component": "^1.0.9",
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-slick": "^0.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -33,7 +36,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.2",
     "vite": "^5.1.0"
   }
 }
